--- a/embeddings/Cooccurence Stats.ipynb
+++ b/embeddings/Cooccurence Stats.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('god', 3156851), ('one', 2268075), ('upon', 2256671), ('may', 2243437), ('shall', 2129379), ('us', 1831379), ('man', 1797155), ('would', 1713276), ('great', 1654792), ('men', 1574743)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from csv import DictReader\n",
     "from collections import Counter\n",
@@ -37,17 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "463231888\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(sum(freqDist.values()))\n",
     "# 463,231,888 words"
@@ -55,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "71670\n",
-      "['god', 'one', 'upon', 'may', 'shall', 'us', 'man', 'would', 'great', 'men']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(frequentWords))\n",
     "print(frequentWords[0:10])"
@@ -84,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,95 +78,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32830"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from os import listdir\n",
-    "from os.path import isfile, join\n",
-    "\n",
-    "textPath = '/Users/bkitano/Desktop/Classes/spring_2019/thesis/corpus/cleaned_txt/'\n",
-    "\n",
-    "textFiles = [f for f in listdir(textPath) if isfile(join(textPath, f))]\n",
-    "\n",
-    "len(textFiles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.sparse import dok_matrix\n",
-    "df = dok_matrix((len(frequentWords), len(frequentWords)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(71670, 71670)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape\n",
-    "# df['god']\n",
-    "# df['god']['god'] should store the total number of appearances\n",
-    "# df will be a diagonal matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def asdf( args ):\n",
+    "from scipy.sparse import csr_matrix\n",
+    "\n",
+    "def cooccurDummy( args, wordMap, V ):\n",
     "\n",
     "    word = args[0] \n",
     "    window = args[1] \n",
-    "    wordMap = args[3]\n",
-    "    \n",
+    "    df = dok_matrix((V, V))\n",
     "    for coword in window:\n",
     "        try:\n",
     "            wordID = wordMap[word]\n",
     "            cowordID = wordMap[coword]\n",
-    "            (args[2])[wordID, cowordID] += 1.0\n",
+    "            df[wordID, cowordID] += 1.0\n",
     "        except:\n",
-    "            print(word)"
+    "            print(word)\n",
+    "    csr = df.tocsr()\n",
+    "    return csr\n",
+    "\n",
+    "def cooccur(args):\n",
+    "    return cooccurDummy(args, wordToID, len(frequentWords))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
+    "import os\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
     "\n",
+    "textPath = '/Users/bkitano/Desktop/Classes/Spring_2019/thesis/corpus/cleaned_txt/'\n",
+    "\n",
+    "textFiles = [f for f in listdir(textPath) if isfile(join(textPath, f))]\n",
     "cooccurrencePath = '/Users/bkitano/Desktop/Classes/spring_2019/thesis/embeddings/cooccur/'\n",
     "L = 5 # window size, or L in the paper\n",
     "# window: x1 x2 ... xL W y1 y2 ... yL\n",
@@ -202,50 +129,81 @@
     "with open(textPath + textFiles[0], 'r+') as f:\n",
     "    text = f.read()\n",
     "    tokens = [w for w in nltk.word_tokenize(text) if w in frequentWords]\n",
-    "#     for i in range(L, len(tokens)-1):\n",
-    "    for i in range(L, L+2):\n",
-    "        word = tokens[i]\n",
-    "        window = tokens[i-L : i + L + 1]\n",
-    "        asdf((word, window, df, wordToID))\n",
-    "          "
+    "#     for i in range(L, len(tokens)-1):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  (17048, 1779)\t1.0\n",
-      "  (17048, 2746)\t1.0\n",
-      "  (17048, 2314)\t1.0\n",
-      "  (17048, 891)\t1.0\n",
-      "  (17048, 3265)\t1.0\n",
-      "  (17048, 17048)\t1.0\n",
-      "  (17048, 2099)\t1.0\n",
-      "  (17048, 682)\t1.0\n",
-      "  (17048, 600)\t1.0\n",
-      "  (17048, 1066)\t1.0\n",
-      "  (17048, 39257)\t1.0\n",
-      "  (2099, 2746)\t1.0\n",
-      "  (2099, 2314)\t1.0\n",
-      "  (2099, 891)\t1.0\n",
-      "  (2099, 3265)\t1.0\n",
-      "  (2099, 17048)\t1.0\n",
-      "  (2099, 2099)\t1.0\n",
-      "  (2099, 682)\t1.0\n",
-      "  (2099, 600)\t1.0\n",
-      "  (2099, 1066)\t1.0\n",
-      "  (2099, 39257)\t1.0\n",
-      "  (2099, 115)\t1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(df)"
+    "wordTarget = tokens[L:len(tokens) - L]\n",
+    "windowTarget = [tokens[i-L:i + L + 1] for i in range(L, len(tokens) - L)]\n",
+    "\n",
+    "pairs = list(zip(wordTarget, windowTarget))\n",
+    "#     for i in range(L, L+2):\n",
+    "#         word = tokens[i]\n",
+    "#         window = tokens[i-L : i + L + 1]\n",
+    "#         asdf((word, window, df, wordToID))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = cooccur(pairs[1])\n",
+    "print(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Pool\n",
+    "\n",
+    "with Pool(processes=4) as pool:\n",
+    "    results = pool.map(cooccur, pairs)\n",
+    "    pool.close()\n",
+    "    pool.join()\n",
+    "    print('All sub-processes done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_sparse(m):\n",
+    "    x = np.zeros(m[0].shape)\n",
+    "    for a in m:\n",
+    "        ri = np.repeat(np.arange(a.shape[0]),np.diff(a.indptr))\n",
+    "        x[ri,a.indices] += a.data\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg = sum_sparse(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(agg, cooccurrencePath + \"test.p\")"
    ]
   },
   {
