new fast cooccur algorithm

--- a/embeddings/Cooccurence Stats.ipynb
+++ b/embeddings/Cooccurence Stats.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,22 @@
     "with open(totalFreqDistFile) as f:\n",
     "    reader = DictReader(f, fieldnames=['word', 'count'])\n",
     "    freqDist = Counter({row['word']: int(row['count']) for row in reader})\n",
-    "\n",
-    "print(freqDist.most_common(10))\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "463231888\n"
+     ]
+    }
+   ],
    "source": [
     "print(sum(freqDist.values()))\n",
     "# 463,231,888 words"
@@ -39,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71670\n",
+      "['god', 'one', 'upon', 'may', 'shall', 'us', 'man', 'would', 'great', 'men']\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(frequentWords))\n",
     "print(frequentWords[0:10])"
@@ -59,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy.sparse import dok_matrix\n",
-    "from scipy.sparse import csr_matrix\n",
+    "from scipy.sparse import dok_matrix, csr_matrix\n",
+    "from multiprocessing import Pool\n",
     "\n",
     "def cooccurDummy( args, wordMap, V ):\n",
     "\n",
@@ -95,19 +110,47 @@
     "        try:\n",
     "            wordID = wordMap[word]\n",
     "            cowordID = wordMap[coword]\n",
-    "            df[wordID, cowordID] += 1.0\n",
+    "            df[wordID, cowordID] += 1\n",
     "        except:\n",
     "            print(word)\n",
     "    csr = df.tocsr()\n",
     "    return csr\n",
     "\n",
     "def cooccur(args):\n",
-    "    return cooccurDummy(args, wordToID, len(frequentWords))"
+    "    return cooccurDummy(args, wordToID, len(frequentWords))\n",
+    "\n",
+    "def parallelF(token):\n",
+    "    try:\n",
+    "        wordToID[token]\n",
+    "        return token\n",
+    "    except:\n",
+    "        return None\n",
+    "    \n",
+    "def parallelFilter(tokens, p):\n",
+    "    with Pool(processes = p) as pool:\n",
+    "        results = pool.map(parallelF, tokens)\n",
+    "        pool.close()\n",
+    "        pool.join()\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_sparse(m):\n",
+    "    x = np.zeros(m[0].shape)\n",
+    "    for a in m:\n",
+    "        ri = np.repeat(np.arange(a.shape[0]),np.diff(a.indptr))\n",
+    "        x[ri,a.indices] += a.data\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,84 +169,39 @@
     "# https://stackoverflow.com/questions/17458751/python-symmetric-word-matrix-using-nltk\n",
     "# need to parallelize\n",
     "\n",
-    "with open(textPath + textFiles[0], 'r+') as f:\n",
-    "    text = f.read()\n",
-    "    tokens = [w for w in nltk.word_tokenize(text) if w in frequentWords]\n",
-    "#     for i in range(L, len(tokens)-1):"
+    "with open(textPath + textFiles[45], 'r+') as f:\n",
+    "    text = f.read().split('\\n')[0]\n",
+    "    # need to parallelize it\n",
+    "    tokens = [t for t in parallelFilter(nltk.word_tokenize(text), 5) if t is not None ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "wordTarget = tokens[L:len(tokens) - L]\n",
     "windowTarget = [tokens[i-L:i + L + 1] for i in range(L, len(tokens) - L)]\n",
     "\n",
-    "pairs = list(zip(wordTarget, windowTarget))\n",
-    "#     for i in range(L, L+2):\n",
-    "#         word = tokens[i]\n",
-    "#         window = tokens[i-L : i + L + 1]\n",
-    "#         asdf((word, window, df, wordToID))"
+    "pairs = list(zip(wordTarget, windowTarget))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "h = cooccur(pairs[1])\n",
-    "print(h)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from multiprocessing import Pool\n",
-    "\n",
-    "with Pool(processes=4) as pool:\n",
-    "    results = pool.map(cooccur, pairs)\n",
-    "    pool.close()\n",
-    "    pool.join()\n",
-    "    print('All sub-processes done.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sum_sparse(m):\n",
-    "    x = np.zeros(m[0].shape)\n",
-    "    for a in m:\n",
-    "        ri = np.repeat(np.arange(a.shape[0]),np.diff(a.indptr))\n",
-    "        x[ri,a.indices] += a.data\n",
-    "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agg = sum_sparse(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "pickle.dump(agg, cooccurrencePath + \"test.p\")"
+    "import scipy.sparse as sp\n",
+    "rows, cols, vals = [], [], []\n",
+    "for word, window in pairs:\n",
+    "    for coword in window:\n",
+    "        if wordToID.get(word) is not None:\n",
+    "            rows.append(wordToID[word])\n",
+    "            cols.append(wordToID[coword])\n",
+    "            vals.append(1)\n",
+    "X = sp.csr_matrix((vals, (rows, cols)))"
    ]
   },
   {
